--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -6,6 +7,11 @@
 
   <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
   <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, transport aéroport, gare, Saint-Estève, Canet, Argelès, Espagne">
+
+  <!-- Icônes / couleur appli -->
+  <link rel="icon" href="ouassvtc.png" type="image/png">
+  <link rel="apple-touch-icon" href="ouassvtc.png">
+  <meta name="theme-color" content="#000000">
 
   <!-- Google Analytics (déclencher après consentement en production) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-23LLHRH2QL"></script>
@@ -270,7 +276,6 @@
       const wrap = document.getElementById('fare');
       if (wrap) {
         wrap.style.display = 'block';
-        // petite animation d'apparition si tu veux
         wrap.classList.add('show');
       }
     }
