--- a/index.html
+++ b/index.html
@@ -61,10 +61,20 @@
     .btn-main:hover,.btn-main:focus-visible{opacity:.9;transform:translateY(-2px);outline:none}
 
     /* --- Contact buttons --- */
-    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 24px}
+    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 12px}
     .btn{display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer}
     .btn:hover,.btn:focus-visible{opacity:.9;transform:translateY(-1px);outline:none}
     .btn:disabled{opacity:.6;cursor:not-allowed}
+
+    /* bouton "ajouter l'appli" */
+    .a2hs-wrap{margin-top:10px;display:flex;justify-content:center}
+    .btn-addapp{
+      background:#fff;
+      color:#111;
+      border:1px solid #000;
+      box-shadow:0 2px 6px rgba(0,0,0,.05);
+      gap:6px;
+    }
 
     .btn-light{background:#fff;color:#111;border:1px solid var(--border);box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;font-size:14px;border-radius:999px;display:inline-flex}
     .btn-light:hover,.btn-light:focus-visible{transform:translateY(-1px);outline:none}
@@ -80,12 +90,10 @@
       padding:14px 16px;
       display:none;            /* sera affichée via JS */
       box-shadow:0 10px 24px rgba(0,0,0,.25);
-      /* centrée et largeur identique au container */
       width:min(1100px,92vw);
       margin-inline:auto;
     }
-    /* Quand la barre est ouverte, on pousse le contenu pour éviter le recouvrement */
-    body.fare-open{ padding-top:calc(var(--navH) + 82px); } /* ~82px = hauteur de la barre */
+    body.fare-open{ padding-top:calc(var(--navH) + 82px); }
 
     .fare-row{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .fare-left{display:flex;align-items:center;gap:10px}
@@ -94,19 +102,15 @@
     .fare-meta{font-size:13px;color:#d1d5db;margin-top:4px}
     .chip{font-size:12px;border:1px solid rgba(255,255,255,.15);padding:6px 10px;border-radius:999px;color:#86efac;border-color:#22c55e}
 
-    /* --- Formulaire --- */
     .intro{text-align:center;font-size:15px;color:#444;font-weight:650;margin:20px 0 10px}
     form label{display:block;font-size:14px;font-weight:650;margin-bottom:6px;margin-top:12px}
     input,select,textarea{width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f9f9f9;font-size:16px;transition:border .2s,background .2s}
     input:focus,select:focus,textarea:focus{outline:none;border-color:var(--brand);background:#fff}
     textarea{min-height:64px;resize:none}
-
     .form-buttons{display:flex;flex-direction:column;gap:12px;margin:20px 0 24px}
 
-    /* --- Map --- */
     #map{height:320px;border-radius:var(--radius);margin-top:20px}
 
-    /* --- Feedback / Modal --- */
     .success-message{background:#ecfdf5;border:1px solid #bbf7d0;color:#16a34a;padding:14px 16px;border-radius:12px;font-weight:700;text-align:center;margin-top:20px}
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:100;padding:16px}
     .modal.show{display:flex}
@@ -114,8 +118,8 @@
     .modal-icon{font-size:40px;line-height:1;margin-bottom:8px}
     .modal-title{font-size:18px;font-weight:900;margin-bottom:6px}
     .modal-text{font-size:14px;color:#4b5563;margin-bottom:14px}
+    .modal-actions{display:flex;flex-direction:column;gap:10px;align-items:center}
 
-    /* --- Desktop enhancements --- */
     @media (min-width:700px){
       .hero{grid-template-columns:1.1fr .9fr}
       .hero-text{text-align:left}
@@ -127,23 +131,19 @@
       .contact-buttons a:nth-child(3){grid-column:5/span 2}
       #map{height:420px}
       .fare-price{font-size:38px}
-      /* sur desktop on garde la barre fixe, déjà centrée */
     }
 
-    /* --- Very wide screens --- */
     @media (min-width:1100px){
       .container{max-width:1100px}
       .btn-main{font-size:18px}
     }
 
-    /* --- Small screens (fine tuning) --- */
     @media (max-width:560px){
       .fare-price{font-size:28px}
       .hero-text h1{font-size:22px}
       .btn{font-size:14px;padding:12px 8px}
     }
 
-    /* --- Accessibilité: réduit les animations si demandé --- */
     @media (prefers-reduced-motion:reduce){
       *{animation:none !important;transition:none !important;scroll-behavior:auto}
     }
@@ -174,6 +174,10 @@
           <a class="btn" href="tel:0644120784" onclick="trackEvent('clic_appel','Appeler')">📞 Appeler</a>
           <a class="btn" href="https://wa.me/33644120784" target="_blank" rel="noopener" onclick="trackEvent('clic_whatsapp','WhatsApp')">💬 WhatsApp</a>
           <a class="btn" href="sms:+33644120784" onclick="trackEvent('clic_sms','SMS')">✉️ SMS</a>
+        </div>
+        <!-- bouton ajouter l'app -->
+        <div class="a2hs-wrap">
+          <button type="button" class="btn btn-addapp" id="btnAddAppMain">📱 Ajouter l’application</button>
         </div>
       </div>
 
@@ -257,7 +261,10 @@
       <div class="modal-icon">✅</div>
       <div class="modal-title" id="successTitle">Formulaire bien envoyé</div>
       <div class="modal-text">Nous revenons vers vous rapidement !</div>
-      <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
+      <div class="modal-actions">
+        <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
+        <button type="button" class="btn btn-addapp" id="btnAddAppModal">📱 Ajouter l’application</button>
+      </div>
     </div>
   </div>
 
@@ -266,6 +273,29 @@
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
     let formEnvoye = false;
+
+    /* Pour l'installation */
+    let deferredPrompt = null;
+    const ANDROID_MSG = "Sur Android : ouvrez le menu ⋮ puis « Ajouter à l’écran d’accueil ».";
+    const IOS_MSG = "Sur iPhone : touchez le bouton Partager (carré + flèche) puis « Sur l’écran d’accueil ».";
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      // on empêche le prompt auto
+      e.preventDefault();
+      deferredPrompt = e;
+      // on pourrait afficher le bouton seulement à ce moment-là si tu veux
+    });
+
+    function handleInstallClick(){
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.finally(() => {
+          deferredPrompt = null;
+        });
+      } else {
+        alert("Pour ajouter l’application :\n\n" + ANDROID_MSG + "\n\n" + IOS_MSG);
+      }
+    }
 
     /* Mesure la nav + ouvre la barre d'estimation fixée en haut */
     function openFareBar(){
@@ -347,13 +377,18 @@
       modal.setAttribute('aria-hidden','false');
       document.body.style.overflow='hidden';
       const homeBtn=document.getElementById('homeBtn');
+      const btnAddModal=document.getElementById('btnAddAppModal');
+
       setTimeout(()=>homeBtn.focus(),50);
       modal.addEventListener('click',(e)=>{ if(e.target===modal){hideSuccessModal();} });
       window.addEventListener('keydown',onEscClose);
+
       homeBtn.addEventListener('click',()=>{
         hideSuccessModal();
         window.scrollTo({top:0,behavior:'smooth'});
       },{once:true});
+
+      btnAddModal.addEventListener('click', handleInstallClick);
     }
 
     function hideSuccessModal(){
@@ -376,11 +411,18 @@
       directionsService = new google.maps.DirectionsService();
       directionsRenderer = new google.maps.DirectionsRenderer({ map });
 
-      // Autocomplete (France)
       const acOpts = { componentRestrictions: { country: "fr" } };
       new google.maps.places.Autocomplete(document.getElementById("depart"), acOpts);
       new google.maps.places.Autocomplete(document.getElementById("arrivee"), acOpts);
     }
+
+    // bouton principal ajouter appli
+    document.addEventListener('DOMContentLoaded', () => {
+      const btnAddAppMain = document.getElementById('btnAddAppMain');
+      if (btnAddAppMain) {
+        btnAddAppMain.addEventListener('click', handleInstallClick);
+      }
+    });
   </script>
 
   <!-- Google Maps (clé d'exemple) -->
