--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
   <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, transport aéroport, gare, Saint-Estève, Canet, Argelès, Espagne">
 
-  <!-- Icônes / couleur appli -->
+  <!-- Icônes / manifest pour l'ajout à l'écran d'accueil -->
   <link rel="icon" href="ouassvtc.png" type="image/png">
   <link rel="apple-touch-icon" href="ouassvtc.png">
   <meta name="theme-color" content="#000000">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- Google Analytics (déclencher après consentement en production) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-23LLHRH2QL"></script>
@@ -31,13 +32,12 @@
       --bg:#fff;
       --success:#16a34a;
       --radius:14px;
-      --navH:56px; /* sera mis à jour en JS */
+      --navH:56px;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111;line-height:1.4}
 
-    /* --- Header / Nav --- */
     header{background:#000;color:#fff;text-align:center;padding:28px}
     header img{max-height:120px;inline-size:auto;height:auto;aspect-ratio:auto}
 
@@ -45,7 +45,6 @@
     nav#topnav a{color:#111;text-decoration:none;font-weight:650;font-size:15px;padding:8px 10px;border-radius:999px}
     nav#topnav a:hover,nav#topnav a:focus-visible{background:#f3f4f6;outline:none}
 
-    /* --- Layout --- */
     .container{max-width:min(1100px,92vw);margin:auto;padding:28px 18px}
     .hero{display:grid;grid-template-columns:1fr;gap:16px;align-items:center}
     .hero-text{text-align:center}
@@ -60,35 +59,31 @@
     }
     .btn-main:hover,.btn-main:focus-visible{opacity:.9;transform:translateY(-2px);outline:none}
 
-    /* --- Contact buttons --- */
     .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 12px}
-    .btn{display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer}
+    .btn{
+      display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;
+      border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;
+      padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;
+      transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer
+    }
     .btn:hover,.btn:focus-visible{opacity:.9;transform:translateY(-1px);outline:none}
     .btn:disabled{opacity:.6;cursor:not-allowed}
 
-    /* bouton "ajouter l'appli" */
-    .a2hs-wrap{margin-top:10px;display:flex;justify-content:center}
-    .btn-addapp{
-      background:#fff;
-      color:#111;
-      border:1px solid #000;
-      box-shadow:0 2px 6px rgba(0,0,0,.05);
-      gap:6px;
-    }
+    /* bouton ajouter app clair */
+    .btn-addapp{background:#fff;color:#111;border:1px solid #000;box-shadow:0 2px 6px rgba(0,0,0,.04)}
 
     .btn-light{background:#fff;color:#111;border:1px solid var(--border);box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;font-size:14px;border-radius:999px;display:inline-flex}
     .btn-light:hover,.btn-light:focus-visible{transform:translateY(-1px);outline:none}
 
-    /* --- Estimation: FIXE en haut (sous la nav), largeur alignée au container --- */
     .fare-sticky{
       position:fixed;
-      top:var(--navH); /* collée sous la nav */
+      top:var(--navH);
       left:0; right:0;
       z-index:50;
       background:#0a0a0a;color:#fff;
       border-radius:0 0 var(--radius) var(--radius);
       padding:14px 16px;
-      display:none;            /* sera affichée via JS */
+      display:none;
       box-shadow:0 10px 24px rgba(0,0,0,.25);
       width:min(1100px,92vw);
       margin-inline:auto;
@@ -107,11 +102,10 @@
     input,select,textarea{width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f9f9f9;font-size:16px;transition:border .2s,background .2s}
     input:focus,select:focus,textarea:focus{outline:none;border-color:var(--brand);background:#fff}
     textarea{min-height:64px;resize:none}
-    .form-buttons{display:flex;flex-direction:column;gap:12px;margin:20px 0 24px}
 
+    .form-buttons{display:flex;flex-direction:column;gap:12px;margin:20px 0 24px}
     #map{height:320px;border-radius:var(--radius);margin-top:20px}
 
-    .success-message{background:#ecfdf5;border:1px solid #bbf7d0;color:#16a34a;padding:14px 16px;border-radius:12px;font-weight:700;text-align:center;margin-top:20px}
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:100;padding:16px}
     .modal.show{display:flex}
     .modal-content{background:#fff;color:#111;width:100%;max-width:420px;border-radius:18px;padding:22px 18px;text-align:center;box-shadow:0 24px 64px rgba(0,0,0,.25)}
@@ -133,19 +127,10 @@
       .fare-price{font-size:38px}
     }
 
-    @media (min-width:1100px){
-      .container{max-width:1100px}
-      .btn-main{font-size:18px}
-    }
-
     @media (max-width:560px){
       .fare-price{font-size:28px}
       .hero-text h1{font-size:22px}
       .btn{font-size:14px;padding:12px 8px}
-    }
-
-    @media (prefers-reduced-motion:reduce){
-      *{animation:none !important;transition:none !important;scroll-behavior:auto}
     }
   </style>
 </head>
@@ -154,7 +139,6 @@
     <img src="ouassvtc.png" alt="OuassVTC" loading="eager" width="240" height="120">
   </header>
 
-  <!-- NAV avec id pour mesurer la hauteur -->
   <nav id="topnav">
     <a href="services.html">Services</a>
     <a href="faq.html">FAQ</a>
@@ -175,13 +159,12 @@
           <a class="btn" href="https://wa.me/33644120784" target="_blank" rel="noopener" onclick="trackEvent('clic_whatsapp','WhatsApp')">💬 WhatsApp</a>
           <a class="btn" href="sms:+33644120784" onclick="trackEvent('clic_sms','SMS')">✉️ SMS</a>
         </div>
-        <!-- bouton ajouter l'app -->
-        <div class="a2hs-wrap">
+        <!-- ✅ bouton ajouter l'application -->
+        <div style="display:flex;justify-content:center;margin-top:8px;">
           <button type="button" class="btn btn-addapp" id="btnAddAppMain">📱 Ajouter l’application</button>
         </div>
       </div>
 
-      <!-- Estimation FIXE en haut -->
       <aside>
         <div id="fare" class="fare-sticky" aria-live="polite">
           <div class="fare-row">
@@ -200,7 +183,6 @@
 
     <p class="intro">Remplissez le formulaire ci-dessous et envoyez-le pour être recontacté dans les plus brefs délais.</p>
 
-    <!-- Formulaire -->
     <form id="formResa" onsubmit="sendEmail(event)">
       <label for="nom">Nom et prénom</label>
       <input type="text" id="nom" placeholder="Ex. Dupont Pierre" autocomplete="name" required>
@@ -245,7 +227,6 @@
     <h3 style="font-size:16px;font-weight:700;text-align:center;margin-top:20px;margin-bottom:8px;color:#333">🗺️ Visualisez votre itinéraire ci-dessous</h3>
     <div id="map" role="region" aria-label="Carte de l'itinéraire"></div>
 
-    <!-- Coordonnées -->
     <section class="contact-section" style="text-align:center;margin-top:32px;color:#555;font-size:15px">
       <p>📞 <a href="tel:0644120784">06 44 12 07 84</a></p>
       <p>💬 <a href="https://wa.me/33644120784" target="_blank" rel="noopener">WhatsApp</a></p>
@@ -263,6 +244,7 @@
       <div class="modal-text">Nous revenons vers vous rapidement !</div>
       <div class="modal-actions">
         <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
+        <!-- ✅ bouton ajouter l'appli dans la modale -->
         <button type="button" class="btn btn-addapp" id="btnAddAppModal">📱 Ajouter l’application</button>
       </div>
     </div>
@@ -274,42 +256,34 @@
     emailjs.init("U08QGWWRUenJDOllc");
     let formEnvoye = false;
 
-    /* Pour l'installation */
+    /* INSTALLATION PWA */
     let deferredPrompt = null;
-    const ANDROID_MSG = "Sur Android : ouvrez le menu ⋮ puis « Ajouter à l’écran d’accueil ».";
-    const IOS_MSG = "Sur iPhone : touchez le bouton Partager (carré + flèche) puis « Sur l’écran d’accueil ».";
 
     window.addEventListener('beforeinstallprompt', (e) => {
-      // on empêche le prompt auto
       e.preventDefault();
-      deferredPrompt = e;
-      // on pourrait afficher le bouton seulement à ce moment-là si tu veux
+      deferredPrompt = e; // on stocke
     });
 
     function handleInstallClick(){
       if (deferredPrompt) {
-        deferredPrompt.prompt();
+        deferredPrompt.prompt(); // ouvre "Installer"
         deferredPrompt.userChoice.finally(() => {
           deferredPrompt = null;
         });
       } else {
-        alert("Pour ajouter l’application :\n\n" + ANDROID_MSG + "\n\n" + IOS_MSG);
+        alert("Pour ajouter l'application :\n• Android : menu ⋮ puis « Ajouter à l’écran d’accueil »\n• iPhone : bouton Partager → « Sur l’écran d’accueil »");
       }
     }
 
-    /* Mesure la nav + ouvre la barre d'estimation fixée en haut */
+    /* barre estimation */
     function openFareBar(){
       const nav = document.getElementById('topnav');
       const navH = nav ? nav.offsetHeight : 56;
       document.documentElement.style.setProperty('--navH', navH + 'px');
       document.body.classList.add('fare-open');
       const wrap = document.getElementById('fare');
-      if (wrap) {
-        wrap.style.display = 'block';
-        wrap.classList.add('show');
-      }
+      if (wrap) { wrap.style.display = 'block'; wrap.classList.add('show'); }
     }
-    // si orientation change / resize, on réajuste la marge haute
     window.addEventListener('resize', () => {
       if (document.body.classList.contains('fare-open')) openFareBar();
     });
@@ -337,7 +311,7 @@
     function calculerEstimation(){
       return new Promise((resolve)=>{
         const d=depart.value,a=arrivee.value;
-        const wrap=document.getElementById("fare"),priceEl=document.getElementById("prixAffiche"),detEl=document.getElementById("detailsTrajet");
+        const priceEl=document.getElementById("prixAffiche"),detEl=document.getElementById("detailsTrajet");
         if(!d||!a){ openFareBar(); resolve(null); return; }
         directionsService.route({origin:d,destination:a,travelMode:google.maps.TravelMode.DRIVING},
         (result,status)=>{
@@ -348,7 +322,6 @@
             const duree=leg.duration.text;
             const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
             animatePrice(priceEl,prix);
-            priceEl.classList.remove("pop");void priceEl.offsetWidth;priceEl.classList.add("pop");
             detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
             openFareBar();
             resolve({prix,distKm,duree});
@@ -376,10 +349,12 @@
       modal.classList.add('show');
       modal.setAttribute('aria-hidden','false');
       document.body.style.overflow='hidden';
+
       const homeBtn=document.getElementById('homeBtn');
-      const btnAddModal=document.getElementById('btnAddAppModal');
+      const btnAddAppModal=document.getElementById('btnAddAppModal');
 
       setTimeout(()=>homeBtn.focus(),50);
+
       modal.addEventListener('click',(e)=>{ if(e.target===modal){hideSuccessModal();} });
       window.addEventListener('keydown',onEscClose);
 
@@ -388,7 +363,8 @@
         window.scrollTo({top:0,behavior:'smooth'});
       },{once:true});
 
-      btnAddModal.addEventListener('click', handleInstallClick);
+      // bouton "ajouter l'application" dans la modale
+      btnAddAppModal.addEventListener('click', handleInstallClick);
     }
 
     function hideSuccessModal(){
@@ -416,12 +392,10 @@
       new google.maps.places.Autocomplete(document.getElementById("arrivee"), acOpts);
     }
 
-    // bouton principal ajouter appli
+    // quand la page est prête, on branche le bouton du haut
     document.addEventListener('DOMContentLoaded', () => {
       const btnAddAppMain = document.getElementById('btnAddAppMain');
-      if (btnAddAppMain) {
-        btnAddAppMain.addEventListener('click', handleInstallClick);
-      }
+      if (btnAddAppMain) btnAddAppMain.addEventListener('click', handleInstallClick);
     });
   </script>
 
