--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
   <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, transport aéroport, gare, Saint-Estève, Canet, Argelès, Espagne">
 
-  <!-- Icônes / manifest pour l'ajout à l'écran d'accueil -->
+  <!-- Icônes + manifest pour installation -->
   <link rel="icon" href="ouassvtc.png" type="image/png">
   <link rel="apple-touch-icon" href="ouassvtc.png">
   <meta name="theme-color" content="#000000">
@@ -32,12 +32,13 @@
       --bg:#fff;
       --success:#16a34a;
       --radius:14px;
-      --navH:56px;
+      --navH:56px; /* sera mis à jour en JS */
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111;line-height:1.4}
 
+    /* --- Header / Nav --- */
     header{background:#000;color:#fff;text-align:center;padding:28px}
     header img{max-height:120px;inline-size:auto;height:auto;aspect-ratio:auto}
 
@@ -45,6 +46,7 @@
     nav#topnav a{color:#111;text-decoration:none;font-weight:650;font-size:15px;padding:8px 10px;border-radius:999px}
     nav#topnav a:hover,nav#topnav a:focus-visible{background:#f3f4f6;outline:none}
 
+    /* --- Layout --- */
     .container{max-width:min(1100px,92vw);margin:auto;padding:28px 18px}
     .hero{display:grid;grid-template-columns:1fr;gap:16px;align-items:center}
     .hero-text{text-align:center}
@@ -59,36 +61,35 @@
     }
     .btn-main:hover,.btn-main:focus-visible{opacity:.9;transform:translateY(-2px);outline:none}
 
-    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 12px}
-    .btn{
-      display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;
-      border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;
-      padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;
-      transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer
-    }
+    /* --- Contact buttons --- */
+    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 24px}
+    .btn{display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer}
     .btn:hover,.btn:focus-visible{opacity:.9;transform:translateY(-1px);outline:none}
     .btn:disabled{opacity:.6;cursor:not-allowed}
 
-    /* bouton ajouter app clair */
-    .btn-addapp{background:#fff;color:#111;border:1px solid #000;box-shadow:0 2px 6px rgba(0,0,0,.04)}
+    /* bouton clair pour "ajouter l'appli" */
+    .btn-addapp{background:#fff;color:#111;border:1px solid #000;box-shadow:0 2px 6px rgba(0,0,0,.05);width:auto;padding:10px 16px}
 
     .btn-light{background:#fff;color:#111;border:1px solid var(--border);box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;font-size:14px;border-radius:999px;display:inline-flex}
     .btn-light:hover,.btn-light:focus-visible{transform:translateY(-1px);outline:none}
 
+    /* --- Estimation: FIXE en haut (sous la nav), largeur alignée au container --- */
     .fare-sticky{
       position:fixed;
-      top:var(--navH);
+      top:var(--navH); /* collée sous la nav */
       left:0; right:0;
       z-index:50;
       background:#0a0a0a;color:#fff;
       border-radius:0 0 var(--radius) var(--radius);
       padding:14px 16px;
-      display:none;
+      display:none;            /* sera affichée via JS */
       box-shadow:0 10px 24px rgba(0,0,0,.25);
+      /* centrée et largeur identique au container */
       width:min(1100px,92vw);
       margin-inline:auto;
     }
-    body.fare-open{ padding-top:calc(var(--navH) + 82px); }
+    /* Quand la barre est ouverte, on pousse le contenu pour éviter le recouvrement */
+    body.fare-open{ padding-top:calc(var(--navH) + 82px); } /* ~82px = hauteur de la barre */
 
     .fare-row{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .fare-left{display:flex;align-items:center;gap:10px}
@@ -97,6 +98,7 @@
     .fare-meta{font-size:13px;color:#d1d5db;margin-top:4px}
     .chip{font-size:12px;border:1px solid rgba(255,255,255,.15);padding:6px 10px;border-radius:999px;color:#86efac;border-color:#22c55e}
 
+    /* --- Formulaire --- */
     .intro{text-align:center;font-size:15px;color:#444;font-weight:650;margin:20px 0 10px}
     form label{display:block;font-size:14px;font-weight:650;margin-bottom:6px;margin-top:12px}
     input,select,textarea{width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f9f9f9;font-size:16px;transition:border .2s,background .2s}
@@ -104,8 +106,12 @@
     textarea{min-height:64px;resize:none}
 
     .form-buttons{display:flex;flex-direction:column;gap:12px;margin:20px 0 24px}
+
+    /* --- Map --- */
     #map{height:320px;border-radius:var(--radius);margin-top:20px}
 
+    /* --- Feedback / Modal --- */
+    .success-message{background:#ecfdf5;border:1px solid #bbf7d0;color:#16a34a;padding:14px 16px;border-radius:12px;font-weight:700;text-align:center;margin-top:20px}
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:100;padding:16px}
     .modal.show{display:flex}
     .modal-content{background:#fff;color:#111;width:100%;max-width:420px;border-radius:18px;padding:22px 18px;text-align:center;box-shadow:0 24px 64px rgba(0,0,0,.25)}
@@ -114,6 +120,7 @@
     .modal-text{font-size:14px;color:#4b5563;margin-bottom:14px}
     .modal-actions{display:flex;flex-direction:column;gap:10px;align-items:center}
 
+    /* --- Desktop enhancements --- */
     @media (min-width:700px){
       .hero{grid-template-columns:1.1fr .9fr}
       .hero-text{text-align:left}
@@ -127,10 +134,22 @@
       .fare-price{font-size:38px}
     }
 
+    /* --- Very wide screens --- */
+    @media (min-width:1100px){
+      .container{max-width:1100px}
+      .btn-main{font-size:18px}
+    }
+
+    /* --- Small screens (fine tuning) --- */
     @media (max-width:560px){
       .fare-price{font-size:28px}
       .hero-text h1{font-size:22px}
       .btn{font-size:14px;padding:12px 8px}
+    }
+
+    /* --- Accessibilité: réduit les animations si demandé --- */
+    @media (prefers-reduced-motion:reduce){
+      *{animation:none !important;transition:none !important;scroll-behavior:auto}
     }
   </style>
 </head>
@@ -139,6 +158,7 @@
     <img src="ouassvtc.png" alt="OuassVTC" loading="eager" width="240" height="120">
   </header>
 
+  <!-- NAV avec id pour mesurer la hauteur -->
   <nav id="topnav">
     <a href="services.html">Services</a>
     <a href="faq.html">FAQ</a>
@@ -159,12 +179,13 @@
           <a class="btn" href="https://wa.me/33644120784" target="_blank" rel="noopener" onclick="trackEvent('clic_whatsapp','WhatsApp')">💬 WhatsApp</a>
           <a class="btn" href="sms:+33644120784" onclick="trackEvent('clic_sms','SMS')">✉️ SMS</a>
         </div>
-        <!-- ✅ bouton ajouter l'application -->
-        <div style="display:flex;justify-content:center;margin-top:8px;">
+        <!-- ✅ bouton ajouter l'appli sous les boutons -->
+        <div style="display:flex;justify-content:center;margin-top:6px;">
           <button type="button" class="btn btn-addapp" id="btnAddAppMain">📱 Ajouter l’application</button>
         </div>
       </div>
 
+      <!-- Estimation FIXE en haut -->
       <aside>
         <div id="fare" class="fare-sticky" aria-live="polite">
           <div class="fare-row">
@@ -183,6 +204,7 @@
 
     <p class="intro">Remplissez le formulaire ci-dessous et envoyez-le pour être recontacté dans les plus brefs délais.</p>
 
+    <!-- Formulaire -->
     <form id="formResa" onsubmit="sendEmail(event)">
       <label for="nom">Nom et prénom</label>
       <input type="text" id="nom" placeholder="Ex. Dupont Pierre" autocomplete="name" required>
@@ -227,6 +249,7 @@
     <h3 style="font-size:16px;font-weight:700;text-align:center;margin-top:20px;margin-bottom:8px;color:#333">🗺️ Visualisez votre itinéraire ci-dessous</h3>
     <div id="map" role="region" aria-label="Carte de l'itinéraire"></div>
 
+    <!-- Coordonnées -->
     <section class="contact-section" style="text-align:center;margin-top:32px;color:#555;font-size:15px">
       <p>📞 <a href="tel:0644120784">06 44 12 07 84</a></p>
       <p>💬 <a href="https://wa.me/33644120784" target="_blank" rel="noopener">WhatsApp</a></p>
@@ -244,7 +267,7 @@
       <div class="modal-text">Nous revenons vers vous rapidement !</div>
       <div class="modal-actions">
         <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
-        <!-- ✅ bouton ajouter l'appli dans la modale -->
+        <!-- ✅ bouton "ajouter l'appli" dans la modale -->
         <button type="button" class="btn btn-addapp" id="btnAddAppModal">📱 Ajouter l’application</button>
       </div>
     </div>
@@ -256,17 +279,16 @@
     emailjs.init("U08QGWWRUenJDOllc");
     let formEnvoye = false;
 
-    /* INSTALLATION PWA */
+    /* === installation PWA === */
     let deferredPrompt = null;
-
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
-      deferredPrompt = e; // on stocke
+      deferredPrompt = e;
     });
 
     function handleInstallClick(){
       if (deferredPrompt) {
-        deferredPrompt.prompt(); // ouvre "Installer"
+        deferredPrompt.prompt();
         deferredPrompt.userChoice.finally(() => {
           deferredPrompt = null;
         });
@@ -275,15 +297,19 @@
       }
     }
 
-    /* barre estimation */
+    /* Mesure la nav + ouvre la barre d'estimation fixée en haut */
     function openFareBar(){
       const nav = document.getElementById('topnav');
       const navH = nav ? nav.offsetHeight : 56;
       document.documentElement.style.setProperty('--navH', navH + 'px');
       document.body.classList.add('fare-open');
       const wrap = document.getElementById('fare');
-      if (wrap) { wrap.style.display = 'block'; wrap.classList.add('show'); }
+      if (wrap) {
+        wrap.style.display = 'block';
+        wrap.classList.add('show');
+      }
     }
+    // si orientation change / resize, on réajuste la marge haute
     window.addEventListener('resize', () => {
       if (document.body.classList.contains('fare-open')) openFareBar();
     });
@@ -311,7 +337,7 @@
     function calculerEstimation(){
       return new Promise((resolve)=>{
         const d=depart.value,a=arrivee.value;
-        const priceEl=document.getElementById("prixAffiche"),detEl=document.getElementById("detailsTrajet");
+        const wrap=document.getElementById("fare"),priceEl=document.getElementById("prixAffiche"),detEl=document.getElementById("detailsTrajet");
         if(!d||!a){ openFareBar(); resolve(null); return; }
         directionsService.route({origin:d,destination:a,travelMode:google.maps.TravelMode.DRIVING},
         (result,status)=>{
@@ -322,6 +348,7 @@
             const duree=leg.duration.text;
             const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
             animatePrice(priceEl,prix);
+            priceEl.classList.remove("pop");void priceEl.offsetWidth;priceEl.classList.add("pop");
             detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
             openFareBar();
             resolve({prix,distKm,duree});
@@ -349,21 +376,16 @@
       modal.classList.add('show');
       modal.setAttribute('aria-hidden','false');
       document.body.style.overflow='hidden';
-
       const homeBtn=document.getElementById('homeBtn');
       const btnAddAppModal=document.getElementById('btnAddAppModal');
-
       setTimeout(()=>homeBtn.focus(),50);
-
       modal.addEventListener('click',(e)=>{ if(e.target===modal){hideSuccessModal();} });
       window.addEventListener('keydown',onEscClose);
-
       homeBtn.addEventListener('click',()=>{
         hideSuccessModal();
         window.scrollTo({top:0,behavior:'smooth'});
       },{once:true});
-
-      // bouton "ajouter l'application" dans la modale
+      // bouton dans la modale
       btnAddAppModal.addEventListener('click', handleInstallClick);
     }
 
@@ -387,12 +409,13 @@
       directionsService = new google.maps.DirectionsService();
       directionsRenderer = new google.maps.DirectionsRenderer({ map });
 
+      // Autocomplete (France)
       const acOpts = { componentRestrictions: { country: "fr" } };
       new google.maps.places.Autocomplete(document.getElementById("depart"), acOpts);
       new google.maps.places.Autocomplete(document.getElementById("arrivee"), acOpts);
     }
 
-    // quand la page est prête, on branche le bouton du haut
+    // on branche le bouton du haut
     document.addEventListener('DOMContentLoaded', () => {
       const btnAddAppMain = document.getElementById('btnAddAppMain');
       if (btnAddAppMain) btnAddAppMain.addEventListener('click', handleInstallClick);
